Code quality improvements in KeywordsApi