@@ -46,7 +46,6 @@ import org.fao.geonet.api.ApiUtils;
 import org.fao.geonet.api.exception.ResourceNotFoundException;
 import org.fao.geonet.api.exception.WebApplicationException;
 import org.fao.geonet.api.registries.model.ThesaurusInfo;
-import org.fao.geonet.api.tools.i18n.LanguageUtils;
 import org.fao.geonet.constants.Geonet;
 import org.fao.geonet.domain.ISODate;
 import org.fao.geonet.exceptions.BadParameterEx;
@@ -110,12 +109,6 @@ import static org.fao.geonet.kernel.rdf.Selectors.SKOS_NAMESPACE;
     description = ApiParams.API_CLASS_REGISTRIES_OPS)
 public class KeywordsApi {
 
-    /**
-     * The language utils.
-     */
-    @Autowired
-    LanguageUtils languageUtils;
-
     @Autowired
     SettingManager settingManager;
 
@@ -161,8 +154,7 @@ public class KeywordsApi {
      * @throws Exception the exception
      */
     @io.swagger.v3.oas.annotations.Operation(
-        summary = "Search keywords",
-        description = "")
+        summary = "Search keywords")
     @RequestMapping(
         path = "/search",
         method = RequestMethod.GET,
@@ -175,16 +167,14 @@ public class KeywordsApi {
     @ResponseBody
     public Object searchKeywords(
         @Parameter(
-            description = "Query",
-            required = false
+            description = "Query"
         )
         @RequestParam(
             required = false
         )
             String q,
         @Parameter(
-            description = "Query in that language",
-            required = false
+            description = "Query in that language"
         )
         @RequestParam(
             value = "lang",
@@ -192,8 +182,7 @@ public class KeywordsApi {
         )
             String lang,
         @Parameter(
-            description = "Number of rows",
-            required = false
+            description = "Number of rows"
         )
         @RequestParam(
             required = false,
@@ -201,8 +190,7 @@ public class KeywordsApi {
         )
             int rows,
         @Parameter(
-            description = "Start from",
-            required = false
+            description = "Start from"
         )
         @RequestParam(
             defaultValue = "0",
@@ -210,8 +198,7 @@ public class KeywordsApi {
         )
             int start,
         @Parameter(
-            description = "Return keyword information in one or more languages",
-            required = false
+            description = "Return keyword information in one or more languages"
         )
         @RequestParam(
             value = XmlParams.pLang,
@@ -219,8 +206,7 @@ public class KeywordsApi {
         )
             List<String> targetLangs,
         @Parameter(
-            description = "Thesaurus identifier",
-            required = false
+            description = "Thesaurus identifier"
         )
         @RequestParam(
             required = false
@@ -235,24 +221,21 @@ public class KeywordsApi {
 //        )
 //            String thesauriDomainName,
         @Parameter(
-            description = "Type of search",
-            required = false
+            description = "Type of search"
         )
         @RequestParam(
             defaultValue = "CONTAINS"
         )
             KeywordSearchType type,
         @Parameter(
-            description = "URI query",
-            required = false
+            description = "URI query"
         )
         @RequestParam(
             required = false
         )
             String uri,
         @Parameter(
-            description = "Sort by",
-            required = false
+            description = "Sort by"
         )
         @RequestParam(
             required = false,
@@ -354,23 +337,19 @@ public class KeywordsApi {
         @RequestParam(name = "thesaurus")
             String sThesaurusName,
         @Parameter(
-            description = "Languages.",
-            required = false)
+            description = "Languages.")
         @RequestParam(name = "lang", required = false)
             String[] langs,
         @Parameter(
-            description = "Only print the keyword, no thesaurus information.",
-            required = false)
+            description = "Only print the keyword, no thesaurus information.")
         @RequestParam(required = false, defaultValue = "false")
             boolean keywordOnly,
         @Parameter(
-            description = "XSL template to use (ISO19139 keyword by default, see convert.xsl).",
-            required = false)
+            description = "XSL template to use (ISO19139 keyword by default, see convert.xsl).")
         @RequestParam(required = false)
             String transformation,
         @Parameter(
-            description = "langMap, that converts the values in the 'lang' parameter to how they will be actually represented in the record. {'fre':'fra'} or {'fre':'fr'}.  Missing/empty means to convert to iso 2 letter.",
-            required = false)
+            description = "langMap, that converts the values in the 'lang' parameter to how they will be actually represented in the record. {'fre':'fra'} or {'fre':'fr'}.  Missing/empty means to convert to iso 2 letter.")
         @RequestParam (name = "langMap", required = false)
             String  langMapJson,
         @Parameter(hidden = true)
@@ -428,23 +407,19 @@ public class KeywordsApi {
         @RequestParam(name = "thesaurus")
             String sThesaurusName,
         @Parameter(
-            description = "Languages.",
-            required = false)
+            description = "Languages.")
         @RequestParam(name = "lang", required = false)
             String[] langs,
         @Parameter(
-            description = "Only print the keyword, no thesaurus information.",
-            required = false)
+            description = "Only print the keyword, no thesaurus information.")
         @RequestParam(required = false, defaultValue = "false")
             boolean keywordOnly,
         @Parameter(
-            description = "XSL template to use (ISO19139 keyword by default, see convert.xsl).",
-            required = false)
+            description = "XSL template to use (ISO19139 keyword by default, see convert.xsl).")
         @RequestParam(required = false)
             String transformation,
         @Parameter(
-            description = "langMap, that converts the values in the 'lang' parameter to how they will be actually represented in the record. {'fre':'fra'} or {'fre':'fr'}.  Missing/empty means to convert to iso 2 letter.",
-            required = false)
+            description = "langMap, that converts the values in the 'lang' parameter to how they will be actually represented in the record. {'fre':'fra'} or {'fre':'fr'}.  Missing/empty means to convert to iso 2 letter.")
         @RequestParam (name = "langMap", required = false)
             String  langMapJson,
         @Parameter(hidden = true)
@@ -489,7 +464,7 @@ public class KeywordsApi {
         if (thesaurus == null) {
             String finalSThesaurusName = sThesaurusName;
             Optional<Thesaurus> thesaurusEntry = thesaurusManager.getThesauriMap().values().stream().filter(t -> t.getKey().endsWith(finalSThesaurusName)).findFirst();
-            if (!thesaurusEntry.isPresent()) {
+            if (thesaurusEntry.isEmpty()) {
                 throw new IllegalArgumentException(String.format(
                     "Thesaurus '%s' not found.", sThesaurusName));
             } else {
@@ -516,7 +491,7 @@ public class KeywordsApi {
         Element descKeys;
         Map<String, Map<String, String>> jsonResponse = new HashMap<>();
 
-        uri = URLDecoder.decode(uri, "UTF-8");
+        uri = URLDecoder.decode(uri, StandardCharsets.UTF_8);
 
         if (uri == null) {
             descKeys = new Element("descKeys");
@@ -571,8 +546,8 @@ public class KeywordsApi {
             JSONObject obj = JSONObject.fromObject(langMapJson);
             langConversion = new Element("languageConversions");
             for(Object entry : obj.entrySet()) {
-                String key = ((Map.Entry) entry).getKey().toString();
-                String value = ((Map.Entry) entry).getValue().toString();
+                String key = ((Map.Entry<?, ?>) entry).getKey().toString();
+                String value = ((Map.Entry<?, ?>) entry).getValue().toString();
                 Element conv = new Element("conversion");
                 conv.setAttribute("from", key);
                 conv.setAttribute("to", value.replace("#",""));
@@ -618,7 +593,6 @@ public class KeywordsApi {
      *
      * @param thesaurus the thesaurus
      * @param response  the response
-     * @return the thesaurus
      * @throws Exception the exception
      */
     @io.swagger.v3.oas.annotations.Operation(
@@ -672,7 +646,6 @@ public class KeywordsApi {
      * Delete thesaurus.
      *
      * @param thesaurus the thesaurus
-     * @return the element
      * @throws Exception the exception
      */
     @io.swagger.v3.oas.annotations.Operation(
@@ -703,7 +676,7 @@ public class KeywordsApi {
             throw new ResourceNotFoundException(String.format(
                 "Thesaurus with identifier '%s' not found in the catalogue. Should be one of: %s",
                 thesaurus,
-                thesaurusMan.getThesauriMap().keySet().toString()
+                thesaurusMan.getThesauriMap().keySet()
             ));
         }
         Path item = thesaurusObject.getFile();
@@ -767,9 +740,9 @@ public class KeywordsApi {
         boolean fileUpload = file != null && !file.isEmpty();
 
         // Upload RDF file
-        Path rdfFile = null;
-        String fname = null;
-        File tempDir = null;
+        Path rdfFile;
+        String fname;
+        File tempDir;
 
         if (fileUpload) {
 
@@ -795,7 +768,7 @@ public class KeywordsApi {
             }
 
             long fsize;
-            if (rdfFile != null && Files.exists(rdfFile)) {
+            if (Files.exists(rdfFile)) {
                 fsize = Files.size(rdfFile);
             } else {
                 throw new MissingServletRequestParameterException("Thesaurus file doesn't exist", "file");
@@ -1012,7 +985,7 @@ public class KeywordsApi {
             CSVParser csvParser = new CSVParser(reader, CSVFormat.DEFAULT
                 .withFirstRecordAsHeader()
                 .withIgnoreHeaderCase()
-                .withTrim());
+                .withTrim())
         ) {
 
             Map<String, KeywordBean> allConcepts = new LinkedHashMap<>();
@@ -1075,7 +1048,7 @@ public class KeywordsApi {
             }
 
             Element scheme = buildConceptScheme(csvFile, thesaurusTitle, thesaurusNamespaceUrl);
-            if(broaderLinks.size() > 0 && !topConcepts.isEmpty()) {
+            if(!broaderLinks.isEmpty() && !topConcepts.isEmpty()) {
                 topConcepts.forEach(t -> {
                     Element topConcept = new Element("hasTopConcept", SKOS_NAMESPACE);
                     topConcept.setAttribute("resource", t, RDF_NAMESPACE);
@@ -1210,7 +1183,7 @@ public class KeywordsApi {
         boolean registryUpload = !StringUtils.isEmpty(registryUrl);
 
         // Upload RDF file
-        Path rdfFile = null;
+        Path rdfFile;
         String fname = null;
 
         // Specific upload steps
@@ -1307,9 +1280,9 @@ public class KeywordsApi {
     /**
      * Update the information related to a local thesaurus .
      *
-     * @param thesaurusInfo
-     * @return
-     * @throws Exception
+     * @param thesaurus     name of the thesaurus to update.
+     * @param thesaurusInfo thesaurus information to update.
+     * @throws Exception the exception
      */
     @io.swagger.v3.oas.annotations.Operation(
         summary = "Updates the information of a local thesaurus",
@@ -1368,11 +1341,11 @@ public class KeywordsApi {
      * Download for each language the codelist from the registry. Combine
      * them into one XML document which is then XSLT processed for SKOS conversion.
      *
-     * @param registryUrl the registry url
-     * @param registryType
-     * @param itemName    the item name
-     * @param lang        the selected languages
-     * @param context     the context
+     * @param registryUrl  the registry url
+     * @param registryType type of registry
+     * @param itemName     the item name
+     * @param lang         the selected languages
+     * @param context      the context
      * @return the path
      * @throws Exception the exception
      */
@@ -1448,7 +1421,6 @@ public class KeywordsApi {
      * @param fname   the fname
      * @param type    the type
      * @param dir     the dir
-     * @return Element thesaurus uploaded
      * @throws Exception the exception
      */
     private void uploadThesaurus(Path rdfFile, String style,
